@@ -1,9 +1,9 @@
 Package: soilDB
 Type: Package
 Title: Soil Database Interface
-Version: 0.5-2
-Date: 2012-03-02
-Packaged: 2012-03-02; dylan
+Version: 0.5-5
+Date: 2012-03-16
+Packaged: 2012-03-16; dylan
 Author: D.E. Beaudette and J.M. Skovlin
 Maintainer: D.E. Beaudette <dylan.beaudette@ca.usda.gov>
 Description: A collection of functions for reading data from USDA-NCSS soil databases.
