@@ -1,5 +1,8 @@
+-------------------------- soilDB 0.5-5 (2012-03-16) ----------------------------
+* adding preimlinary functions for querying component data from local NASIS
+
 -------------------------- soilDB 0.5-1 (2012-02-22) ----------------------------
-* fetchNASIS() and fetchPedonPC() now integrate extended data
+* fetchNASIS() and fetchPedonPC() now integrate `extended' data
 * warning and error messages cleaned-up
 * multiple textures no longer cause duplicate HZ rows (NASIS only)
 * exteded queries now split frags/para-frags
